--- a/galerie.css
+++ b/galerie.css
@@ -1,89 +1,1 @@
-
-.galerie{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: auto;
-}
-
-.galerie-container {
-  max-width: 1200px; 
-  margin: 40px auto; 
-  padding: 20px; 
-}
-
-.hero-contact {
-  text-align: center; 
-  margin-bottom: 20px; 
-}
-
-.galerie {
-  width: 100%; 
-  height: auto; 
-  max-width: 100%; 
-  margin: 0 auto; 
-  display: block; 
-}
-
-@media (max-width: 768px) {
-  .galerie-container {
-    margin: 20px auto;
-    padding: 10px;
-}
-  }
-  .hero-contact {
-    font-size: 18px; 
-  }
-  .galerie {
-    width: 90%; 
-}
-
-@media (max-width: 480px) {
-  .galerie-container {
-    margin: 10px auto;
-    padding: 5px;
-  }
-  .hero-contact {
-    font-size: 16px;
-  }
-  .galerie {
-    width: 80%; 
-  }
-}
-
-
-h4{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 40px;
-    font-family: "knewave"; 
-    margin: 0; /* Enlève l'espace par défaut autour des titres */
-    line-height: 1.2; /* Ajuste l'espacement vertical entre les lignes */
-    color: #212121;
-    margin-bottom:5px;
-    margin-right: 10px;
-}
-
-
-.hero-contact {
-    font-size: 40px;
-    font-family: "knewave";
-    display: flex; 
-    justify-content: center;
-    align-items: center;
-    padding-top: 150px;
-
-}
-
-h5{
-    font-size: 40px;
-    background-color: #46A08B;
-    padding-top: 0px;
-    padding-left: 20px;
-    padding-right: 20px;
-    padding-bottom: 2px;
-    border-radius: 50px;
-    box-shadow: 0px 0px 5px rgba(191, 191, 191, 0.5); /* Ombre subtile */
-    color: #212121;
-}
+.galerie,h4{justify-content:center}h4,h5{color:#212121}.galerie-container{max-width:1200px;margin:40px auto;padding:20px}.hero-contact{text-align:center;margin-bottom:20px}.galerie{align-items:center;height:auto;max-width:100%;margin:0 auto;display:block;width:90%}.hero-contact,h4{font-family:knewave;display:flex}@media (max-width:768px){.galerie-container{margin:20px auto;padding:10px}}@media (max-width:480px){.galerie-container{margin:10px auto;padding:5px}.hero-contact{font-size:16px}.galerie{width:80%}}.hero-contact,h4,h5{font-size:40px}h4{align-items:center;margin:0 10px 5px 0;line-height:1.2}.hero-contact{justify-content:center;align-items:center;padding-top:150px}h5{background-color:#46a08b;padding:0 20px 2px;border-radius:50px;box-shadow:0 0 5px rgba(191,191,191,.5)}
