--- a/agenda.css
+++ b/agenda.css
@@ -1,226 +1,1 @@
-.calendhead {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-}
-.arrows {
-    display: flex;
-    align-items: center;
-}
-.agenda {
-    margin-top: 40px;
-    margin-bottom: 60px;
-    padding: 10px;
-    display: flex;
-    flex-direction: row;
-    column-gap: 10px;
-    display: flex;
-}
-.ag1 {
-    display: flex;
-    flex-grow: 3;
-    width: 100%;
-}
-.ag2 {
-    display: flex;
-    flex-direction: column;
-    border-radius: 10px;
-    height: 400px;
-    width: 99%;
-    flex-grow: 1;
-    row-gap: 10px;
-    column-gap: 20px;
-}
-.event1 {
-    background-color: rgb(255, 224, 224);
-    max-height: fit-content;
-    border-radius: 10px;
-    margin: 0;
-    padding: 10px;
-}
-
-.event2 {
-    display: flex;
-    flex-direction: column;
-    background-color: rgb(222, 255, 223);
-    max-height: fit-content;
-    border-radius: 10px;
-    padding: 10px;
-    margin: 0;
-}
-.event2 h1, .event1 h1 {
-    font-family: inter;
-    text-align: left;
-    padding: 0;
-    margin: 0;
-}
-.event2 h2, .event1 h2 {
-    font-family: inter;
-    text-align: right;
-    padding: 0;
-    margin: 0;
-}
-.line1 {
-    display: flex;
-    justify-content: space-between;
-}
-.event2 p, .event1 p {
-    font-family: inter;
-    font-weight: 500;
-}
-
-h1 {
-    font-family: inter;
-    font-weight: 600;
-    text-align: center;
-    color: black ;
-    margin-bottom: 2rem;
-}
-
-h3 {
-    font-weight: 600;
-}
-
-.calendar {
-    box-sizing: border-box;
-    width: 99%;
-    max-width: 800px;
-    padding: 1rem;
-    background: #fff;
-    border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-}
-.calendar * {
-    padding: 0;
-    margin: 0;
-    font-family: inter;
-}
-
-.calendar header {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-}
-
-.calendar nav {
-    display: flex;
-    align-items: center;
-}
-
-.calendar ul {
-    list-style: none;
-    display: flex;
-    flex-wrap: wrap;
-    text-align: center;
-}
-
-.calendar ul li {
-    width: calc(100% / 7);
-    margin-top: 25px;
-    position: relative;
-    z-index: 2;
-    transition: all 0.3s ease-out;
-    border-radius: 20px;
-}
-
-.calendar ul li:hover {
-    transform: scale(1.1);
-    border-radius: 20px;
-}
-
-.hero-agenda {
-    font-size: 40px;
-    font-family: "knewave";
-    display: flex; 
-    justify-content: center;
-    align-items: center;
-    padding-top: 150px;
-}
-
-
-.hero-agenda h5{
-    font-size: 40px;
-    background-color: #46A08B;
-    padding-top: 0px;
-    padding-left: 20px;
-    padding-right: 20px;
-    padding-bottom: 10px;
-    border-radius: 50px;
-    box-shadow: 0px 0px 5px rgba(191, 191, 191, 0.5); /* Ombre subtile */
-    color: #212121;
-}
-
-.hero-agenda h4{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 40px;
-    font-family: "knewave"; 
-    margin: 0; /* Enlève l'espace par défaut autour des titres */
-    line-height: 1.2; /* Ajuste l'espacement vertical entre les lignes */
-    color: #212121;
-    margin-bottom:10px;
-    margin-right: 10px;
-}
-
-#prev,
-#next {
-    width: 20px;
-    height: 20px;
-    position: relative;
-    border: none;
-    background: transparent;
-    cursor: pointer;
-}
-
-#prev::before,
-#next::before {
-    content: "";
-    width: 50%;
-    height: 50%;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    border-style: solid;
-    border-width: 0.25em 0.25em 0 0;
-    border-color: #ccc;
-}
-
-#next::before {
-    transform: translate(-50%, -50%) rotate(45deg);
-}
-
-#prev::before {
-    transform: translate(-50%, -50%) rotate(-135deg);
-}
-
-#prev:hover::before,
-#next:hover::before {
-    border-color: #000;
-}
-
-.days {
-    font-weight: 600;
-}
-
-.dates li.today {
-    color: #fff;
-}
-
-.dates li.today::before {
-    content: "";
-    width: 2rem;
-    height: 2rem;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    background: #000;
-    border-radius: 50%;
-    z-index: -1;
-}
-
-.dates li.inactive {
-    color: #ccc;
-}
+.event1,.event2{max-height:fit-content;padding:10px}.agenda,.event1,.event2{padding:10px}.ag1,.ag2,.agenda,.calendhead,.event2,.line1{display:flex}.days,h1,h3{font-weight:600}.calendhead{flex-direction:row;align-items:center;justify-content:space-between}.arrows,.calendar nav{display:flex;align-items:center}.agenda{margin-top:40px;margin-bottom:60px;flex-direction:row;column-gap:10px}.ag1{flex-grow:3;width:100%}.ag2,.calendar{width:99%;border-radius:10px}.ag2{flex-direction:column;height:400px;flex-grow:1;row-gap:10px;column-gap:20px}.event1{background-color:#ffe0e0;border-radius:10px;margin:0}.event2{flex-direction:column;background-color:#deffdf;border-radius:10px;margin:0}.event1 h1,.event2 h1{font-family:inter;text-align:left;padding:0;margin:0}.event1 h2,.event2 h2{font-family:inter;text-align:right;padding:0;margin:0}.calendar ul,h1{text-align:center}.line1{justify-content:space-between}.event1 p,.event2 p{font-family:inter;font-weight:500}h1{font-family:inter;color:#000;margin-bottom:2rem}.calendar{box-sizing:border-box;max-width:800px;padding:1rem;background:#fff;box-shadow:0 0 10px rgba(0,0,0,.2)}.calendar *{padding:0;margin:0;font-family:inter}.hero-agenda,.hero-agenda h4{display:flex;font-size:40px;font-family:knewave}.calendar header{display:flex;align-items:center;justify-content:space-between}.calendar ul{list-style:none;display:flex;flex-wrap:wrap}.calendar ul li{width:calc(100% / 7);margin-top:25px;position:relative;z-index:2;transition:.3s ease-out;border-radius:20px}.calendar ul li:hover{transform:scale(1.1);border-radius:20px}.hero-agenda{justify-content:center;align-items:center;padding-top:150px}.hero-agenda h5{font-size:40px;background-color:#46a08b;padding:0 20px 10px;border-radius:50px;box-shadow:0 0 5px rgba(191,191,191,.5);color:#212121}.hero-agenda h4{justify-content:center;align-items:center;margin:0 10px 10px 0;line-height:1.2;color:#212121}#next,#prev{width:20px;height:20px;position:relative;border:none;background:0 0;cursor:pointer}#next::before,#prev::before{content:"";width:50%;height:50%;position:absolute;top:50%;left:50%;border-style:solid;border-width:.25em .25em 0 0;border-color:#ccc}#next::before{transform:translate(-50%,-50%) rotate(45deg)}#prev::before{transform:translate(-50%,-50%) rotate(-135deg)}#next:hover::before,#prev:hover::before{border-color:#000}.dates li.today{color:#fff}.dates li.today::before{content:"";width:2rem;height:2rem;position:absolute;top:50%;left:50%;transform:translate(-50%,-50%);background:#000;border-radius:50%;z-index:-1}.dates li.inactive{color:#ccc}
