--- a/main.css
+++ b/main.css
@@ -1,103 +1,1 @@
-* {
-    margin: 0;
-    padding: 0;
-}
-.right-links {
-    padding-right: 60px;
-}
-
-body {
-    background-color: #FFFEF2;
-}
-
-header {
-    display: flex;
-    flex-direction: row;
-    background-color: #FFFEF2;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    z-index: 1000;
-    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1); 
-    padding: 10px 20px; 
-  }
-
-nav {
-    display: flex;
-    width: 100%;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.logo {
-    height: fit-content;
-    width: 20%;
-    max-width: 80px;
-    margin: 10px;
-    margin-left: 100px;
-}
-
-nav a {
-    text-decoration: none;
-    background-color: #171717;
-    padding: 8px;
-    display: inline-block;
-    box-shadow: 0px 0px 5px rgba(40, 40, 40, 0.5);
-    font-family: "inter";
-    font-size: 14px;
-    color: #ffffff;
-    margin: 0 10px;
-    border-radius: 20px;
-    transition: transform 1s ease;
-}
-
-nav a:hover {
-    background-color: #4a4a4a;
-    box-shadow: 0px 0px 10px rgba(164, 164, 164, 0.7);
-    transform: scale(1.1);
-}
-
-.inscrire {
-    background-color: #46A08B;
-    color: rgb(0, 0, 0);
-    border-radius: 20px;
-}
-
-.inscrire:hover {
-    background-color: #46A08B;
-    box-shadow: 0px 0px 10px rgba(164, 164, 164, 0.7);
-    transform: scale(1.1);
-}
-
-footer {
-    display: flex;
-    flex-direction: row;
-    background-color: #46A08B;
-    justify-content: space-between;
-    padding: 50px;
-}
-
-b {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    text-decoration: none;
-    color: rgb(0, 0, 0);
-    font-size: 16 px;
-    font-family: Arial, Helvetica, sans-serif;
-}
-
-b:hover {
-    text-decoration: underline 1px;
-    color: #142824;
-}
-
-header a {
-    transition: all 3s ease;
-    transform: scale(1.3);
-}
-
-header a:hover {
-    transform: scale(1.4);
-}
+body,header{background-color:#fffef2}header,nav{width:100%;display:flex}.inscrire,nav a{border-radius:20px}.inscrire:hover,nav a:hover{box-shadow:0 0 10px rgba(164,164,164,.7);transform:scale(1.1)}.inscrire,.inscrire:hover,footer{background-color:#46a08b}footer,footer a,header,nav{display:flex}footer a,nav a{text-decoration:none}*{margin:0;padding:0}.right-links{padding-right:60px}header{flex-direction:row;position:fixed;top:0;left:0;z-index:1000;box-shadow:2px 2px 5px rgba(0,0,0,.1);padding:10px 20px}nav{justify-content:space-between;align-items:center}.logo{height:fit-content;width:20%;max-width:80px;margin:10px 10px 10px 100px}nav a{background-color:#171717;padding:8px;display:inline-block;box-shadow:0 0 5px rgba(40,40,40,.5);font-family:inter;font-size:14px;color:#fff;margin:0 20px;transition:transform 1s}nav a:hover{background-color:#4a4a4a}.inscrire{color:#000}footer{flex-direction:row;justify-content:space-between;padding:50px}footer a{justify-content:space-between;align-items:center;color:#000;font-size:16 px;font-family:Arial,Helvetica,sans-serif}footer a:hover{text-decoration:underline 1px;color:#142824}header img{transition:.3s;transform:scale(2)}header img:hover{transform:scale(1.5)}
