--- a/accueill.css
+++ b/accueill.css
@@ -1,1 +1,222 @@
-.hero,h3{align-items:center}.hero-text h1,.hero-text h2,.hero-text strong{margin:0;line-height:1.2;color:#212121}.phrase,h3{font-size:40px}.button-link,h1{border-radius:40px}.hero{display:flex;height:80vh;background-color:#fffef2;padding-right:100px;padding-top:100px}.image-container{width:50%;margin-left:100px;display:flex}.hero-text{margin-left:10px}.hero-text h1{font-size:50px;font-family:inter,Arial,Helvetica,sans-serif}.hero-text h2{font-size:50px;font-family:inter;padding-left:20px}.button-link,.hero-text strong,.phrase,h3{font-family:knewave}.hero-text strong{font-size:70px;padding-right:10px}h1{background-color:#46a08b;padding:0 25px;box-shadow:0 0 5px rgba(191,191,191,.5);color:#333}.image-container2,.phrase,h3{display:flex;background-color:#fffef2}.image-container2{width:100%;padding:20px;justify-content:center;align-items:center;height:100vh}@keyframes fadeIn{to{opacity:1;transform:translateY(0)}}h3{padding-top:30px;justify-content:center}.phrase{padding:50px;align-items:center;justify-content:center}.button-link,.button-link:hover{background-color:#46a08b}.button-link{font-size:29px;color:#fffef2;padding:5px 20px;text-decoration:none;font-weight:700;transition:transform 1s}.dirig1,.dirig2,.dirig3,.sal1,.sal2{display:flex;padding:20px;border-radius:20px}.salles{display:flex;flex-direction:column;justify-content:center;align-items:center;background-color:#fffef2}.imgsalles{display:flex;flex-direction:row;margin-top:50px}.sal1,.sal2{margin:20px;justify-content:center;align-items:end;width:600px;height:20vw;background-position:center;background-size:cover}.sal1{background-image:url("https://s2.static-clubeo.com/uploads/bctheixnoyalo/grounds/pierre-dosse__od5i3f.jpg")}.sal2{background-image:url("https://s2.static-clubeo.com/uploads/bctheixnoyalo/grounds/jean-touze__od5guh.jpg")}.sal1 p,.sal2 p{color:#212121;background-color:#fffef2ba;padding:10px;border-radius:10px;text-transform:uppercase;font-family:inter;font-weight:700;width:100%;text-align:center}.sal1:hover,.sal2:hover{transition:.2s;transform:scale(1.05)}.dirig{display:flex;flex-direction:row;margin-top:50px;justify-content:center}.dirig1,.dirig2,.dirig3{flex-direction:column;width:200px;height:fit-content;align-items:center;justify-content:center;background-color:#46a08b;margin:20px}.dirig1 p,.dirig2 p,.dirig3 p{font-size:16px;font-family:inter;font-weight:600;color:#000;margin-top:10px}.photo1,.photo2,.photo3{width:100%;height:200px;border-radius:10px;object-fit:cover}
+.hero,
+h3 {
+    align-items: center
+}
+
+.hero-text h1,
+.hero-text h2,
+.hero-text strong {
+    margin: 0;
+    line-height: 1.2;
+    color: #212121
+}
+
+.phrase,
+h3 {
+    font-size: 40px
+}
+
+.button-link,
+h1 {
+    border-radius: 40px
+}
+
+.hero {
+    display: flex;
+    height: 80vh;
+    background-color: #fffef2;
+    padding-right: 100px;
+    padding-top: 100px
+}
+
+.image-container {
+    width: fit-content;
+    margin-left: 100px;
+    margin-right: 50px;
+    margin-bottom: 50px;
+    display: flex
+}
+
+.hero-text {
+    margin-left: 10px
+}
+
+.hero-text h1 {
+    font-size: 50px;
+    font-family: inter, Arial, Helvetica, sans-serif
+}
+
+.hero-text h2 {
+    font-size: 50px;
+    font-family: inter;
+    padding-left: 20px
+}
+
+.button-link,
+.hero-text strong,
+.phrase,
+h3 {
+    font-family: knewave
+}
+
+.hero-text strong {
+    font-size: 70px;
+    padding-right: 10px
+}
+
+h1 {
+    background-color: #46a08b;
+    padding: 0 25px;
+    box-shadow: 0 0 5px rgba(191, 191, 191, .5);
+    color: #333
+}
+
+.image-container2,
+.phrase,
+h3 {
+    display: flex;
+    background-color: #fffef2
+}
+.titre1 {
+    margin-top: 60px;
+}
+.image-container2 {
+    width: 100%;
+    padding: 20px;
+    margin-top: 40px;
+    justify-content: center;
+    align-items: center;
+    height: 40%;
+}
+
+@keyframes fadeIn {
+    to {
+        opacity: 1;
+        transform: translateY(0)
+    }
+}
+
+h3 {
+    padding-top: 30px;
+    justify-content: center
+}
+
+.phrase {
+    padding: 50px;
+    align-items: center;
+    justify-content: center
+}
+
+.button-link,
+.button-link:hover {
+    background-color: #46a08b
+}
+
+.button-link {
+    font-size: 29px;
+    color: #fffef2;
+    padding: 5px 20px;
+    text-decoration: none;
+    font-weight: 700;
+    transition: transform 1s
+}
+
+.dirig1,
+.dirig2,
+.dirig3,
+.sal1,
+.sal2 {
+    display: flex;
+    padding: 20px;
+    border-radius: 20px
+}
+
+.salles {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: #fffef2
+}
+
+.imgsalles {
+    display: flex;
+    flex-direction: row;
+    margin-top: 50px
+}
+
+.sal1,
+.sal2 {
+    margin: 20px;
+    justify-content: center;
+    align-items: end;
+    width: 600px;
+    height: 20vw;
+    background-position: center;
+    background-size: cover
+}
+
+.sal1 {
+    background-image: url("https://s2.static-clubeo.com/uploads/bctheixnoyalo/grounds/pierre-dosse__od5i3f.jpg")
+}
+
+.sal2 {
+    background-image: url("https://s2.static-clubeo.com/uploads/bctheixnoyalo/grounds/jean-touze__od5guh.jpg")
+}
+
+.sal1 p,
+.sal2 p {
+    color: #212121;
+    background-color: #fffef2ba;
+    padding: 10px;
+    border-radius: 10px;
+    text-transform: uppercase;
+    font-family: inter;
+    font-weight: 700;
+    width: 100%;
+    text-align: center
+}
+
+.sal1:hover,
+.sal2:hover {
+    transition: .2s;
+    transform: scale(1.05)
+}
+
+.dirig {
+    display: flex;
+    flex-direction: row;
+    margin-top: 50px;
+    justify-content: center
+}
+
+.dirig1,
+.dirig2,
+.dirig3 {
+    flex-direction: column;
+    width: 200px;
+    height: fit-content;
+    align-items: center;
+    justify-content: center;
+    background-color: #46a08b;
+    margin: 20px
+}
+
+.dirig1 p,
+.dirig2 p,
+.dirig3 p {
+    font-size: 16px;
+    font-family: inter;
+    font-weight: 600;
+    color: #000;
+    margin-top: 10px
+}
+
+.photo1,
+.photo2,
+.photo3 {
+    width: 100%;
+    height: 200px;
+    border-radius: 10px;
+    object-fit: cover
+}
